Demos: prevent 1px jump when header is position fixed.

--- a/docs/_assets/css/jqm-demos.css
+++ b/docs/_assets/css/jqm-demos.css
@@ -26,6 +26,10 @@ body, .jqm-demos  {
 	-moz-box-shadow: 0 0 5px rgba(0,0,0,.15);
 	box-shadow: 0 0 5px rgba(0,0,0,.15);
 }
+.jqm-header.ui-header-fixed:not(.ui-fixed-hidden) {
+	border-top-width: 4px;
+	padding-top: 0;
+}
 .jqm-header h1.jqm-logo {
 	font-size: 1em;
 	margin: .6em 3.375em;
